Bug 707183 - Incoherent font resizing when changing em size in MOBI documents
Summary: Incoherent font resizing when changing em size in MOBI documents
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: fitz (show other bugs)
Version: 1.22.0
Hardware: All All
: P2 normal
Assignee: MuPDF bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-21 08:54 UTC by Bastien Dejean
Modified: 2023-09-21 15:39 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Example MOBI document. (9.74 KB, application/x-mobipocket-ebook)
2023-09-21 08:54 UTC, Bastien Dejean
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bastien Dejean 2023-09-21 08:54:47 UTC
Created attachment 24866 [details]
Example MOBI document.

Steps to reproduce: `for s in 11 22 33 44; do mutool draw -S $s -o test-${s}.png test.mobi 1; done`.
You'll notice that the font size of the main text changes while the font size of the chapter and initial cap are fixed.
Comment 1 Tor Andersson 2023-09-21 15:39:30 UTC
commit 4ae522a299df7e18f155ae319c7756298d69c490
Author: Tor Andersson <tor.andersson@artifex.com>
Date:   Thu Sep 21 15:36:17 2023 +0200

    Bug 707183: Use relative MOBI font sizes.
    
    Scale them with the base 'em' size instead of using specific point sizes.