Bug 707183: Use relative MOBI font sizes.

Scale them with the base 'em' size instead of using specific point sizes.